playground/crossbound-https-passthrough/httpbin-https-passthrough-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-https-passthrough
spec:
  hosts:
  - "httpbin.org"
  gateways:
  - httpbin-https-passthrough-gateway
  tls:
  - match:
    - port: 443
      sni_hosts:
      - httpbin.org
    route:
    - destination:
        port:
          number: 443
        host: "httpbin.org"
